@@ -1,19 +1,24 @@
 package com.example.medicare_call.service.data_processor;
 
 import com.example.medicare_call.domain.CareCallRecord;
-import com.example.medicare_call.dto.data_processor.HealthDataExtractionRequest;
+
+import com.example.medicare_call.service.ai.CareCallDataExtractionPrompt;
+import com.example.medicare_call.service.ai.OpenAiChatService;
 import com.example.medicare_call.dto.data_processor.HealthDataExtractionResponse;
 import com.example.medicare_call.domain.MedicationSchedule;
 import com.example.medicare_call.repository.MedicationScheduleRepository;
-import com.example.medicare_call.service.ai.AiHealthDataExtractorService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.ai.chat.model.ChatResponse;
+import org.springframework.ai.converter.BeanOutputConverter;
+import org.springframework.ai.openai.OpenAiChatOptions;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -21,9 +26,13 @@ import java.util.stream.Collectors;
 public class CareCallAnalysisService {
     public static final String MEAL_STATUS_UNKNOWN_MESSAGE = "해당 시간대 식사 여부를 명확히 확인하지 못했어요.";
 
-    private final AiHealthDataExtractorService aiHealthDataExtractorService;
+    private final OpenAiChatService openAiChatService;
     private final MedicationScheduleRepository medicationScheduleRepository;
     private final CareCallAnalysisResultSaveService careCallAnalysisResultSaveService;
+    private final BeanOutputConverter<HealthDataExtractionResponse> beanOutputConverter = new BeanOutputConverter<>(HealthDataExtractionResponse.class);
+
+    @Value("${openai.model}")
+    private String openaiModel;
 
     @Retryable(
             retryFor = Exception.class,
@@ -42,23 +51,40 @@ public class CareCallAnalysisService {
                 callRecord.getStartTime().toLocalDate() :
                 LocalDateTime.now().toLocalDate();
 
-        HealthDataExtractionRequest request = HealthDataExtractionRequest.builder()
-                .transcriptionText(transcriptionText)
-                .callDate(callDate)
-                .medicationNames(
-                        medicationScheduleRepository.findByElder(callRecord.getElder()).stream()
-                                .map(MedicationSchedule::getName)
-                                .distinct()
-                                .collect(Collectors.toList())
-                )
-                .build();
+        List<String> medicationNames = medicationScheduleRepository.findByElder(callRecord.getElder()).stream()
+                .map(MedicationSchedule::getName)
+                .distinct()
+                .toList();
 
-        HealthDataExtractionResponse healthData = aiHealthDataExtractorService.extractHealthData(request);
+        HealthDataExtractionResponse healthData = extractHealthData(callDate, transcriptionText, medicationNames);
 
-        processAndSaveHealthData(callRecord, healthData);
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
     }
 
-    public void processAndSaveHealthData(CareCallRecord callRecord, HealthDataExtractionResponse healthData) {
-        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
+    public HealthDataExtractionResponse extractHealthData(LocalDate callDate, String transcriptionText, List<String> medicationNames) {
+        log.info("OpenAI API를 통한 건강 데이터 추출 시작");
+
+        String prompt = String.format(CareCallDataExtractionPrompt.PROMPT_TEMPLATE,
+                callDate,
+                transcriptionText,
+                medicationNames != null && !medicationNames.isEmpty() ? String.join(", ", medicationNames) : "등록된 약 없음"
+        );
+
+        OpenAiChatOptions options = OpenAiChatOptions.builder()
+                .model(openaiModel)
+                .temperature(0.1)
+                .build();
+
+        ChatResponse response = openAiChatService.openAiChat(prompt, CareCallDataExtractionPrompt.SYSTEM_MESSAGE, options);
+
+        if (response != null && response.getResult() != null) {
+            String content = response.getResult().getOutput().getText();
+            log.info("OpenAI 응답: {}", content);
+
+            return beanOutputConverter.convert(content);
+        } else {
+            // TODO: Custom Error Code 추가해서 예외 처리
+            throw new RuntimeException("OpenAI API 응답이 비어있습니다");
+        }
     }
 } 
